<resources>
    <string name="app_name">MatchClothes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enterEmail">Введите email</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="validationInfo">На вашу почту отправлено письмо \n с подтверждением регистрации</string>
    <string name="validationStatus">Я подтвердил(а) email</string>
    <string name="addCloth">Добавить вещь</string>
    <string name="addCategory">Добавить категорию</string>
    <string name="addOutfit">Добавить образ</string>
    <string name="chooseCategoryOrSeason">Выберите категорию или сезон</string>
    <string name="categories">Категории</string>
    <string name="seasons">Сезоны</string>
    <string name="reset">Сбросить</string>
    <string name="addingCloth">Добавление вещи</string>
    <string name="uploadPhoto">Загрузить фотографию</string>
    <string name="title">Название</string>
    <string name="inputClothTitle">Введите название вещи</string>
    <string name="season">Сезон</string>
    <string name="additionalInfo">Дополнительная информация</string>
    <string name="additionalInfoDescriprionCloth">Особенности ткани / стирки и тд</string>
    <string name="saveCloth">Сохранить вещь</string>
    <string name="addingCategory">Добавление категории</string>
    <string name="inputCategoryTitle">Введите название категории</string>
    <string name="chooseClothes">Выберите вещи</string>
    <string name="saveCategory">Сохранить категорию</string>
    <string name="addingJourney">Добавление путешествия</string>
    <string name="inputJourneyTitle">Введите название путешествия</string>
    <string name="next">Далее</string>
    <string name="addingOutfit">Добавление образа</string>
    <string name="inputOutfitTitle">Введите название образа</string>
    <string name="clothesInOutfit">Вещи в образе</string>
    <string name="additionalInfoOutfitDescription">Особенности образа</string>
    <string name="saveOutfit">Сохранить образ</string>
    <string name="chooseOutfits">Выберите образы</string>
    <string name="calendar">Календарь</string>
    <string name="clothesOfDay">Вещи дня</string>
    <string name="outfitsOfDay">Образы дня</string>
    <string name="adding">Добавление</string>
    <string name="clothes">Вещи</string>
    <string name="search">Поиск по названию</string>
    <string name="date">дата</string>
    <string name="suitcase">Ваш чемодан \n для путешествия</string>
    <string name="resetClothes">Обновить вещи</string>
    <string name="resetOutfits">Обновить образы</string>
    <string name="journeys">Путешествия</string>
    <string name="username">Username</string>
    <string name="wardrobe">Одежда</string>
    <string name="outfits">Образы</string>
    <string name="titles">Названия</string>
    <string name="settings">Настройки</string>
    <string name="changeEmail">Изменить email:</string>
    <string name="inputNewEmail">Введите новый email</string>
    <string name="saveChanges">Сохранить изменения</string>
    <string name="support">Поддержка</string>
    <string name="developerEmail">yuekukhtina@edu.hse.ru</string>
    <string name="logout">Выйти</string>
</resources>