<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F2F0FB"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addingOutfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/addingOutfit"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="29dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/back"
        android:maxWidth="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/addingOutfit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/photoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/outfitImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:maxWidth="250dp"
                    android:src="@drawable/placeholder_cloth"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/uploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#C1D8E7"
                android:text="@string/uploadPhoto"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/outfitTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="text"
                android:textColorHint="#6a6a6a"
                android:layout_marginStart="10dp"
                android:hint="@string/inputOutfitTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/clothesInOutfit"
                android:textSize="22sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clothesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:padding="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryCheckboxRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textStyle="bold"
                android:textSize="22sp"
                android:padding="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/seasonCheckboxRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additionalInfo"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/outfitInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="text"
                android:textColorHint="#6a6a6a"
                android:layout_marginStart="10dp"
                android:hint="@string/additionalInfoOutfitDescription" />

            <Button
                android:id="@+id/saveOutfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#C1D8E7"
                android:text="@string/saveOutfit"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_gravity="end"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
